Adding import and export functionalities
